--- a/web/sass/_module.scss
+++ b/web/sass/_module.scss
@@ -1654,6 +1654,7 @@
         &.multi {
           line-height: 12px;
           white-space: normal;
+          padding: 0 5px;
         }
       }
     }
@@ -6197,6 +6198,7 @@
 
         &.multi {
           line-height: 12px;
+          padding: 0 5px;
         }
       }
     }
