--- a/web/sass/_module.scss
+++ b/web/sass/_module.scss
@@ -1655,7 +1655,7 @@
           line-height: 12px;
           white-space: normal;
           padding: 0 5px;
-          word-break: break-word;
+          //word-break: break-word;
         }
       }
     }
@@ -6201,7 +6201,7 @@
         &.multi {
           line-height: 12px;
           padding: 0 5px;
-          word-break: break-word;
+          //word-break: break-word;
         }
       }
     }
