--- a/web/sass/_module.scss
+++ b/web/sass/_module.scss
@@ -5137,6 +5137,8 @@
               padding-left: 20px;
               background: url("../images/common/sentence_speaker.png") no-repeat left top 2px;
               background-size: 15px auto;
+              line-height: 1;
+              margin-bottom: 5px;
             }
           }
         }
@@ -5764,6 +5766,8 @@
               padding-left: 20px;
               background: url("../images/common/sentence_speaker.png") no-repeat left top 2px;
               background-size: 15px auto;
+              line-height: 1;
+              margin-bottom: 5px;
             }
           }
         }
