--- a/web/sass/panel.scss
+++ b/web/sass/panel.scss
@@ -214,8 +214,7 @@
                   height: 14px;
                   top: 2px;
                   left: 2px;
-                  background: url("../images/common/btn_popall.png") no-repeat
-                    center center;
+                  background: url("../images/common/btn_popall.png") no-repeat center center;
                   background-size: 100% 100%;
                   display: none;
                 }
@@ -259,8 +258,7 @@
                     left: 2px;
                     width: 15px;
                     height: 15px;
-                    background: url("../images/common/wb_star.png") no-repeat -14px
-                      0;
+                    background: url("../images/common/wb_star.png") no-repeat -14px 0;
                     background-size: 28px 15px;
                     @include scale(0.7);
                     transform-origin: top left;
@@ -378,8 +376,7 @@
           width: 13px;
           height: 13px;
           margin-top: -1px;
-          background: url("../images/common/icon_erasor.png") no-repeat center
-            center;
+          background: url("../images/common/icon_erasor.png") no-repeat center center;
           background-size: contain;
           filter: brightness(0.3);
           &.active {
@@ -640,8 +637,7 @@
       display: inline-block;
       width: 11px;
       height: 12.5px;
-      background: url("../images/common/player_speaker.png") no-repeat left
-        center;
+      background: url("../images/common/player_speaker.png") no-repeat left center;
       background-size: 14px 12.5px;
       top: -1px;
     }
@@ -968,7 +964,8 @@
         width: 543px;
         height: 90px;
 
-        textarea {
+        textarea,
+        .textarea {
           pointer-events: auto;
           font-size: 15px;
           line-height: 1.3;
@@ -985,6 +982,11 @@
 
           resize: none;
           text-align: left;
+          padding: 2px;
+        }
+        .textarea {
+          word-wrap: break-word;
+          overflow: auto;
         }
       }
       .keyboard {
@@ -1363,8 +1365,7 @@
       height: 33px;
       top: 0;
       left: 0;
-      background: #f28080 url("../images/common/piece.png") no-repeat center
-        center;
+      background: #f28080 url("../images/common/piece.png") no-repeat center center;
       background-size: 16px 18px;
       border: 2px solid #e40101;
       @include borderRadius(100%);
@@ -1477,8 +1478,7 @@
         width: 100%;
         height: 100%;
 
-        background: url("../images/common/roulette_bg.jpg") no-repeat center
-          center;
+        background: url("../images/common/roulette_bg.jpg") no-repeat center center;
         background-size: 100% 100%;
 
         border-radius: 50%;
@@ -1576,8 +1576,7 @@
         span {
           width: 13px;
           height: 13px;
-          background: rgba(0, 0, 0, 0.2) url("../images/common/piece.png")
-            no-repeat center center;
+          background: rgba(0, 0, 0, 0.2) url("../images/common/piece.png") no-repeat center center;
           background-size: 7px 8px;
           margin: 1px 3px;
           display: inline-block;
@@ -2176,8 +2175,7 @@
             height: 15px;
             top: 2px;
             left: 2px;
-            background: #f28080 url("../images/common/piece.png") no-repeat
-              center center;
+            background: #f28080 url("../images/common/piece.png") no-repeat center center;
             background-size: 8px 9px;
             pointer-events: auto;
             @include borderRadius(100%);
@@ -2308,8 +2306,7 @@
               left: -33px;
               width: 33.5px;
               height: 30px;
-              background: url("../images/common/wb_read_speaker.png") no-repeat
-                center center;
+              background: url("../images/common/wb_read_speaker.png") no-repeat center center;
               background-size: 100% 100%;
             }
           }
@@ -2325,8 +2322,7 @@
               left: -33px;
               width: 33.5px;
               height: 30px;
-              background: url("../images/common/wb_write_speaker.png") no-repeat
-                center center;
+              background: url("../images/common/wb_write_speaker.png") no-repeat center center;
               background-size: 100% 100%;
             }
           }
@@ -2343,8 +2339,7 @@
       pointer-events: auto;
       cursor: pointer;
       z-index: 4;
-      background: url("../images/common/flipcardbar.png") no-repeat center
-        center;
+      background: url("../images/common/flipcardbar.png") no-repeat center center;
       background-size: 100% 100%;
       @include transition(all, 0.6s);
       transform-origin: left bottom;
@@ -2437,8 +2432,7 @@
       left: -20px;
       width: 98px;
       height: 40px;
-      background: url("../images/common/fishing_poor.png") no-repeat center
-        center;
+      background: url("../images/common/fishing_poor.png") no-repeat center center;
       background-size: 100% 100%;
       z-index: 0;
     }
