white space : pre

--- a/web/css/panel.css
+++ b/web/css/panel.css
@@ -1194,6 +1194,7 @@
 .widget > .largeboard .largeboard_wrapper .keyer .textarea {
   word-wrap: break-word;
   overflow: auto;
+  white-space: pre;
 }
 
 .widget > .largeboard .largeboard_wrapper .keyboard {
