--- a/web/sass/panel.scss
+++ b/web/sass/panel.scss
@@ -987,6 +987,7 @@
         .textarea {
           word-wrap: break-word;
           overflow: auto;
+          white-space: pre;
         }
       }
       .keyboard {
