--- a/web/sass/panel.scss
+++ b/web/sass/panel.scss
@@ -671,6 +671,7 @@
     height: 60px;
     position: absolute;
     pointer-events: auto;
+    z-index: 9990 !important;
     cursor: pointer;
     top: 50%;
     left: 50%;
@@ -1665,7 +1666,7 @@
     left: 0;
     width: 2560px;
     height: 1280px;
-    z-index: 99999;
+    z-index: 9999;
     @include scale(0.25);
     transform-origin: left top;
 
