--- a/web/css/panel.css
+++ b/web/css/panel.css
@@ -1248,9 +1248,24 @@
   pointer-events: none;
 }
 
+.widget > .zoomer:hover .edit,
+.widget > .zoomer:hover .erase,
+.widget > .zoomer:hover .eraseAll, .widget > .zoomer:focus .edit,
+.widget > .zoomer:focus .erase,
+.widget > .zoomer:focus .eraseAll {
+  visibility: visible;
+}
+
+.widget > .zoomer .edit,
+.widget > .zoomer .erase,
+.widget > .zoomer .eraseAll {
+  visibility: hidden;
+  z-index: 1;
+}
+
 .widget > .zoomer .edit {
   position: absolute;
-  width: 20px;
+  width: 30px;
   height: 20px;
   top: -5px;
   left: -26px;
@@ -1273,7 +1288,7 @@
 
 .widget > .zoomer .erase {
   position: absolute;
-  width: 20px;
+  width: 30px;
   height: 20px;
   top: 16px;
   left: -26px;
@@ -1297,7 +1312,7 @@
 
 .widget > .zoomer .eraseAll {
   position: absolute;
-  width: 20px;
+  width: 30px;
   height: 20px;
   top: 37px;
   left: -26px;
@@ -1359,6 +1374,7 @@
   width: 100%;
   height: 100%;
   position: relative;
+  z-index: 2;
 }
 
 .widget > .zoomer .zoomer_wrapper .drawer {
@@ -1367,7 +1383,7 @@
   height: 100%;
   -webkit-transform-origin: top left;
           transform-origin: top left;
-  z-index: 3;
+  z-index: 4;
   -webkit-transform: scale(1) !important;
           transform: scale(1) !important;
 }
@@ -1387,7 +1403,7 @@
   height: 100%;
   -webkit-transform-origin: top left;
           transform-origin: top left;
-  z-index: 2;
+  z-index: 3;
   -webkit-transform: scale(1) !important;
           transform: scale(1) !important;
 }
@@ -1447,10 +1463,10 @@
   position: absolute;
   top: -5px;
   left: -5px;
-  z-index: 1;
+  z-index: 2;
   width: calc(100% + 10px);
   height: calc(100% + 10px);
-  background: rgba(255, 255, 255, 0.7);
+  background: white;
   display: none;
   -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
