--- a/web/sass/panel.scss
+++ b/web/sass/panel.scss
@@ -1037,9 +1037,23 @@
     * {
       pointer-events: none;
     }
+    &:hover,
+    &:focus {
+      .edit,
+      .erase,
+      .eraseAll {
+        visibility: visible;
+      }
+    }
+    .edit,
+    .erase,
+    .eraseAll {
+      visibility: hidden;
+      z-index: 1;
+    }
     .edit {
       position: absolute;
-      width: 20px;
+      width: 30px;
       height: 20px;
       top: -5px;
       left: -26px;
@@ -1055,7 +1069,7 @@
     }
     .erase {
       position: absolute;
-      width: 20px;
+      width: 30px;
       height: 20px;
       top: 16px;
       left: -26px;
@@ -1071,7 +1085,7 @@
     }
     .eraseAll {
       position: absolute;
-      width: 20px;
+      width: 30px;
       height: 20px;
       top: 37px;
       left: -26px;
@@ -1117,12 +1131,13 @@
       width: 100%;
       height: 100%;
       position: relative;
+      z-index: 2;
       .drawer {
         position: absolute;
         width: 100%;
         height: 100%;
         transform-origin: top left;
-        z-index: 3;
+        z-index: 4;
         transform: scale(1) !important;
         canvas {
           width: 100% !important;
@@ -1140,7 +1155,7 @@
         width: 100%;
         height: 100%;
         transform-origin: top left;
-        z-index: 2;
+        z-index: 3;
         transform: scale(1) !important;
 
         canvas {
@@ -1194,10 +1209,10 @@
         position: absolute;
         top: -5px;
         left: -5px;
-        z-index: 1;
+        z-index: 2;
         width: calc(100% + 10px);
         height: calc(100% + 10px);
-        background: rgba(255, 255, 255, 0.7);
+        background: rgba(255, 255, 255, 1);
         display: none;
         @include boxShadow(1px 1px 4px rgba(0, 0, 0, 0.2));
       }
