--- a/web/css/mainslider.css
+++ b/web/css/mainslider.css
@@ -3,7 +3,6 @@
   height: 100%;
   position: relative;
 }
-
 .ms_wrapper .header {
   position: absolute;
   width: 80%;
@@ -11,16 +10,13 @@
   left: 10%;
   text-align: center;
 }
-
 .ms_wrapper .header .logo {
   display: inline-block;
 }
-
 .ms_wrapper .header .logo img {
   width: 50px;
   height: auto;
 }
-
 .ms_wrapper .header::after, .ms_wrapper .header::before {
   content: "";
   position: absolute;
@@ -28,15 +24,12 @@
   left: 0;
   top: 18px;
   height: 1px;
-  background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), color-stop(20%, rgba(255, 255, 255, 0.7)), color-stop(80%, rgba(255, 255, 255, 0.7)), to(rgba(255, 255, 255, 0)));
   background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.7) 20%, rgba(255, 255, 255, 0.7) 80%, rgba(255, 255, 255, 0) 100%);
 }
-
 .ms_wrapper .header::before {
   left: auto;
   right: 0;
 }
-
 .ms_wrapper .lessons {
   width: 219px;
   height: 290px;
@@ -47,7 +40,6 @@
   display: none;
   pointer-events: none;
 }
-
 .ms_wrapper .lessons h1,
 .ms_wrapper .lessons h3 {
   color: #333;
@@ -56,22 +48,18 @@
   font-style: italic;
   line-height: 1.3;
 }
-
 .ms_wrapper .lessons h3 {
   font-size: 12px;
   margin-bottom: 5px;
 }
-
 .ms_wrapper .lessons.active {
   display: block;
 }
-
 .ms_wrapper .lessons > .swiper-container {
   width: 100%;
   height: 100%;
   min-height: 50px;
 }
-
 .ms_wrapper .lessons > .swiper-container > .swiper-wrapper > .swiper-slide {
   width: 219px;
   width: auto;
@@ -79,7 +67,6 @@
   display: block;
   padding: 2px;
 }
-
 .ms_wrapper .lessons > .swiper-container > .swiper-wrapper > .swiper-slide > div {
   pointer-events: auto;
   cursor: pointer;
@@ -91,16 +78,12 @@
   font-weight: bold;
   border: 1px solid rgba(0, 0, 0, 0.3);
   background: #fff9ec;
-  background: linear-gradient(173deg, #fff9ec 50%, #f7f1e4 50%);
+  background: linear-gradient(173deg, rgb(255, 249, 236) 50%, rgb(247, 241, 228) 50%);
   overflow: hidden;
   position: relative;
   line-height: 12.5px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -110,88 +93,62 @@
   filter: alpha(opacity=100);
   padding-left: 50px;
 }
-
 .ms_wrapper .lessons > .swiper-container > .swiper-wrapper > .swiper-slide > div:nth-child(1) {
-  -webkit-animation-delay: 0;
-          animation-delay: 0;
+  animation-delay: 0;
 }
-
 .ms_wrapper .lessons > .swiper-container > .swiper-wrapper > .swiper-slide > div:nth-child(2) {
-  -webkit-animation-delay: 0.1s;
-          animation-delay: 0.1s;
+  animation-delay: 0.1s;
 }
-
 .ms_wrapper .lessons > .swiper-container > .swiper-wrapper > .swiper-slide > div:nth-child(3) {
-  -webkit-animation-delay: 0.2s;
-          animation-delay: 0.2s;
+  animation-delay: 0.2s;
 }
-
 .ms_wrapper .lessons > .swiper-container > .swiper-wrapper > .swiper-slide > div:nth-child(4) {
-  -webkit-animation-delay: 0.3s;
-          animation-delay: 0.3s;
+  animation-delay: 0.3s;
 }
-
 .ms_wrapper .lessons > .swiper-container > .swiper-wrapper > .swiper-slide > div:nth-child(5) {
-  -webkit-animation-delay: 0.4s;
-          animation-delay: 0.4s;
+  animation-delay: 0.4s;
 }
-
 .ms_wrapper .lessons > .swiper-container > .swiper-wrapper > .swiper-slide > div:nth-child(6) {
-  -webkit-animation-delay: 0.5s;
-          animation-delay: 0.5s;
+  animation-delay: 0.5s;
 }
-
 .ms_wrapper .lessons > .swiper-container > .swiper-wrapper > .swiper-slide > div:nth-child(7) {
-  -webkit-animation-delay: 0.6s;
-          animation-delay: 0.6s;
+  animation-delay: 0.6s;
 }
-
 .ms_wrapper .lessons > .swiper-container > .swiper-wrapper > .swiper-slide > div:nth-child(8) {
-  -webkit-animation-delay: 0.7s;
-          animation-delay: 0.7s;
+  animation-delay: 0.7s;
 }
-
 .ms_wrapper .lessons > .swiper-container > .swiper-wrapper > .swiper-slide > div:hover > span.front {
   padding-left: 87px !important;
-  -webkit-box-pack: left !important;
-      -ms-flex-pack: left !important;
-          justify-content: left !important;
+  justify-content: left !important;
 }
-
 .ms_wrapper .lessons > .swiper-container > .swiper-wrapper > .swiper-slide > div:hover > span.front::before {
   left: 0px;
 }
-
 .ms_wrapper .lessons > .swiper-container > .swiper-wrapper > .swiper-slide > div > span.main {
   display: block;
   width: 123%;
-  -webkit-transform-origin: left center;
-          transform-origin: left center;
-  -webkit-box-flex: 0;
-      -ms-flex: none;
-          flex: none;
+  transform-origin: left center;
+  flex: none;
   -webkit-backface-visibility: hidden;
-  /* IE 9 */
-  -webkit-transform: scale(0.8) translateZ(0);
-  /* Chrome, Safari, Opera */
+  -ms-transform: scale(0.8) translateZ(0); /* IE 9 */
+  -webkit-transform: scale(0.8) translateZ(0); /* Chrome, Safari, Opera */
   transform: scale(0.8) translateZ(0);
 }
-
 .ms_wrapper .lessons > .swiper-container > .swiper-wrapper > .swiper-slide > div > span.front {
   position: absolute;
-  -webkit-transform-origin: top left;
-          transform-origin: top left;
+  transform-origin: top left;
   top: 0px;
   left: 0px;
   width: 90px;
   height: 50px;
   line-height: 50px;
   background: #f1bb01;
-  background: linear-gradient(155deg, #f3c833 50%, #f1bb01 50%);
+  background: linear-gradient(155deg, rgb(243, 200, 51) 50%, rgb(241, 187, 1) 50%);
   border-right: 3px solid #cd8f01;
   font-family: Gfont-Bold;
   color: #fff;
   font-size: 13px;
+  -ms-transform: scale(0.5);
   -webkit-transform: scale(0.5);
   transform: scale(0.5);
   -webkit-transition: all 0.3s;
@@ -204,23 +161,15 @@
   overflow: hidden;
   padding-left: 13px;
 }
-
 .ms_wrapper .lessons > .swiper-container > .swiper-wrapper > .swiper-slide > div > span.front.multiC {
   line-height: 18px;
   text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   white-space: nowrap;
   padding-left: 2px;
 }
-
 .ms_wrapper .lessons > .swiper-container > .swiper-wrapper > .swiper-slide > div > span.front::before {
   content: "";
   display: inline-block;
@@ -236,11 +185,8 @@
   background: url("../images/common/icon_arrow.png") center center no-repeat;
   background-size: 38px 18px;
   vertical-align: middle;
-  -webkit-box-flex: 0;
-      -ms-flex: none;
-          flex: none;
+  flex: none;
 }
-
 .ms_wrapper .lessons > .swiper-button-prev,
 .ms_wrapper .lessons .swiper-button-next {
   pointer-events: auto;
@@ -252,31 +198,23 @@
   bottom: 0;
   left: 70px;
 }
-
 .ms_wrapper .lessons > .swiper-button-next {
   background-image: url("../images/common/btn_next2.png");
   left: auto;
   right: 70px;
 }
-
 .ms_wrapper .slider {
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .ms_wrapper .slider > .swiper-container {
   width: 100%;
   height: 100%;
   min-height: 50px;
   top: 20px;
 }
-
 .ms_wrapper .slider > .swiper-container > .swiper-wrapper > .swiper-slide {
   text-align: center;
   font-size: 18px;
@@ -287,16 +225,18 @@
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
+  -webkit-justify-content: center;
   justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
+  -webkit-align-items: center;
   align-items: center;
   position: relative;
 }
-
 .ms_wrapper .slider > .swiper-container > .swiper-wrapper > .swiper-slide > img {
   width: 100%;
   height: auto;
@@ -309,36 +249,32 @@
   -webkit-transition-timing-function: ease;
   transition-timing-function: ease;
 }
-
 .ms_wrapper .slider > .swiper-container > .swiper-wrapper > .swiper-slide.expand {
   opacity: 0.3;
   -moz-opacity: 0.3;
   -khtml-opacity: 0.3;
   filter: alpha(opacity=30);
 }
-
 .ms_wrapper .slider > .swiper-container > .swiper-wrapper > .swiper-slide.swiper-slide-active > img {
+  -ms-transform: scale(1.1);
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
-
 .ms_wrapper .slider > .swiper-container > .swiper-wrapper > .swiper-slide.swiper-slide-active.expand {
   opacity: 1;
   -moz-opacity: 1;
   -khtml-opacity: 1;
   filter: alpha(opacity=100);
 }
-
 .ms_wrapper .slider > .swiper-container > .swiper-wrapper > .swiper-slide.swiper-slide-active.expand > img {
+  -ms-transform: scale(1.15);
   -webkit-transform: scale(1.15);
   transform: scale(1.15);
   left: -95px;
 }
-
 .ms_wrapper .slider > .swiper-container > .swiper-wrapper > .swiper-slide.swiper-slide-active.expand .llist {
   display: block;
 }
-
 .ms_wrapper .slider > .swiper-button-prev,
 .ms_wrapper .slider .swiper-button-next {
   width: 40px;
@@ -346,7 +282,6 @@
   background-image: url("../images/common/btn_prev.png");
   background-size: 100% 100%;
 }
-
 .ms_wrapper .slider > .swiper-button-next {
   background-image: url("../images/common/btn_next.png");
 }
