--- a/web/sass/app.scss
+++ b/web/sass/app.scss
@@ -419,7 +419,7 @@ body {
       }
 
       &.power {
-        //display:none;
+        display: none;
         right: 10px;
         bottom: 15px;
         width: 12.5px;
